--- a/src/locales/translationPT.json
+++ b/src/locales/translationPT.json
@@ -9,6 +9,9 @@
   "button":{
     "enter": "Entrar"
   },
+  "color":{
+    "blue":"Azul"
+  },
   "nav":{
     "home":"Inicio",
     "training":"Treinos",
